--- a/index.ipynb
+++ b/index.ipynb
@@ -44,7 +44,15 @@
    "source": [
     "Think about why gradient descent applies so well to a cost function.  Initially, we said that the cost of our function, meaning the difference between what our regression line predicted and the dataset, changed as we altered the y-intercept or the slope of the function.\n",
     "\n",
-    "Remember that mathematically, when we say cost function, we use the residual sum of squares where $$ RSS = \\sum_{i=1}^n(actual - expected)^2 = \\sum_{i=1}^n(y_i - \\hat{y})^2 = \\sum_{i=1}^n(y_i - (mx_i + b))^2$$ for all $x$ and $y$ values of our dataset.  So in the graph directly below, $x_i$ and $y_i$  would be our points representing a movie's budget and revenue.  Meanwhile, $mx_i + b $ is our predicted $y$ value for a given $x$ value, of a budget. \n",
+    "Remember that mathematically, when we say cost function, we use the residual sum of squares where \n",
+    "$$ \n",
+    "\\begin{align}\n",
+    "RSS &= \\sum_{i=1}^n(actual - expected)^2 \\\\\n",
+    "&= \\sum_{i=1}^n(y_i - \\hat{y})^2 \\\\\n",
+    "&= \\sum_{i=1}^n(y_i - (mx_i + b))^2\n",
+    "\\end{align}\n",
+    "$$ \n",
+    "for all $x$ and $y$ values of our dataset.  So in the graph directly below, $x_i$ and $y_i$  would be our points representing a movie's budget and revenue.  Meanwhile, $mx_i + b $ is our predicted $y$ value for a given $x$ value, of a budget. \n",
     "\n",
     "And RSS takes the difference between $mx_i + b$, the $y_i$ value our regression line (the red line below) predicts, and our actual $y$, and sum up these squares for each piece of data in our dataset.  That is the residual sum of squares."
    ]
@@ -145,7 +153,12 @@
    "metadata": {},
    "source": [
     "Because the RSS is a function of how we change our values of $m$ and $b$, we can express this relationship mathematically by saying the cost function, $J$ is the following:  \n",
-    "$$J(m, b) = \\sum_{i=1}^{n}(y_i - (mx_i + b))^2$$\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "J(m, b) & = \\sum_{i=1}^{n}(y_i - \\hat{y})^2\\\\\n",
+    "J(m, b) & = \\sum_{i=1}^{n}(y_i - (mx_i + b))^2 &&\\text{notice $\\hat{y} = mx + b$}\\\\\n",
+    "\\end{align}\n",
+    "$$\n",
     "\n",
     "In the function above, $J$ is a function of $m$ and $b$. $J$ just represents the residual sum of squares, which varies as the $m$ and $b$ variables of our regression line are changed.  "
    ]
@@ -190,13 +203,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In calculating the partial derivatives of our function $J(m, b) = \\sum_{i=1}^{n}(y_i - (mx_i + b))^2$, we won't change the result if we ignore the summation until the very end.  We'll do that to make our calculations easier.\n",
+    "In calculating the partial derivatives of our function $J(m, b) = \\sum_{i=1}^{n}(y_i - (mx_i + b))^2$, **we won't change the result if we ignore the summation until the very end**.  We'll do that to make our calculations easier.\n",
     "\n",
     "Ok, so let's take our partial derivatives of the following:\n",
     "\n",
-    "$$\\frac{\\delta J}{\\delta m}J(m, b) = \\frac{\\delta J}{\\delta m}(y - (mx + b))^2$$\n",
-    "\n",
-    "$$\\frac{\\delta J}{\\delta b}J(m, b) = \\frac{\\delta J}{\\delta b}(y - (mx + b))^2$$"
+    "$$\n",
+    "\\begin{align}\n",
+    "\\frac{\\delta J}{\\delta m}J(m, b) & = \\boldsymbol{\\frac{\\delta J}{\\delta m}}(y - (mx + b))^2  &&\\text{partial derivative with respect to} \\textbf{ m}\\\\\n",
+    "\\\\\n",
+    "\\frac{\\delta J}{\\delta b}J(m, b) & = \\boldsymbol{\\frac{\\delta J}{\\delta b}}(y - (mx + b))^2  &&\\text{partial derivative with respect to} \\textbf{ b}\\\\\n",
+    "\\end{align}\n",
+    "$$"
    ]
   },
   {
@@ -210,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's start with taking the partial derivative with respect to $m$.\n",
+    "Let's start with taking the **partial derivative** with respect to $m$.\n",
     "\n",
     "$$\\frac{\\delta J}{\\delta m}J(m, b) = \\frac{\\delta J}{\\delta m}(y - (mx + b))^2$$"
    ]
@@ -228,9 +245,13 @@
     "collapsed": true
    },
    "source": [
-    "$$g(m,b) = y - (mx + b)$$\n",
-    "\n",
-    "$$J(g(m,b)) = (g(m,b))^2$$"
+    "$$\n",
+    "\\begin{align}\n",
+    "g(m,b)&= y - (mx + b) &&\\text{set $g$ equal to $y-\\hat{y}$}\\\\\n",
+    "\\\\\n",
+    "J(g(m,b))&= (g(m,b))^2 &&\\text{now $J$ is a function of $g$ and $J=g^2$}\\\\\n",
+    "\\end{align}\n",
+    "$$"
    ]
   },
   {
@@ -239,7 +260,13 @@
    "source": [
     "Now using the chain rule to find the partial derivative with respect to a change in the slope, gives us:\n",
     "\n",
-    "$$\\frac{dJ}{dm}J(g) = \\frac{dJ}{dg}J(g(m, b))*\\frac{dg}{dm}g(m,b)$$"
+    "$$\n",
+    "[1]\\mspace{5ex}\\frac{dJ}{dm}J(g) = \\frac{dJ}{dg}J(g(m, b))*\\frac{dg}{dm}g(m,b)\n",
+    "$$\n",
+    "\n",
+    "Because **g** is a function of **m** we get $\\boldsymbol{\\frac{dg}{dm}}(g)$ and \n",
+    "\n",
+    "**J** is a function of **g (which is a function of m**) we get $\\boldsymbol{\\frac{dJ}{dg}}(J)$."
    ]
   },
   {
@@ -247,10 +274,23 @@
    "metadata": {},
    "source": [
     "Our next step is to solve these derivatives individually: \n",
-    "\n",
-    "$$\\frac{dJ}{dg}J(g(m, b)) = \\frac{dJ}{dg}g(m,b)^2 = 2*g(m,b)$$\n",
-    "\n",
-    "$$\\frac{dg}{dm}g(m,b) =  \\frac{dg}{dm} (y - (mx +b)) = \\frac{dg}{dm}y - \\frac{dg}{dm}mx - \\frac{dg}{dm}b = -x $$"
+    "$$\n",
+    "\\begin{align}\n",
+    "\\frac{dJ}{dg}J(g(m, b))&=\\frac{dJ}{dg}g(m,b)^2 &&\\text{Solve $\\boldsymbol{\\frac{dJ}{dg}}(J)$}\\\\\n",
+    "\\\\\n",
+    "&= 2*g(m,b)\\\\\n",
+    "\\\\\n",
+    "\\frac{dg}{dm}g(m,b)&=\\frac{dg}{dm} (y - (mx +b)) &&\\text{Solve $\\boldsymbol{\\frac{dg}{dm}}(g)$}\\\\\n",
+    "\\\\\n",
+    "&=\\frac{dg}{dm} (y - mx - b)\\\\\n",
+    "\\\\\n",
+    "&=\\frac{dg}{dm}y - \\frac{dg}{dm}mx - \\frac{dg}{dm}b\\\\\n",
+    "\\\\\n",
+    "&= 0-x-0\\\\\n",
+    "\\\\\n",
+    "&=-x\\\\\n",
+    "\\end{align}\n",
+    "$$"
    ]
   },
   {
@@ -264,13 +304,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now plugging these back into our chain rule we have: \n",
-    "\n",
-    " $\\frac{dJ}{dg}J(g(m,b))*\\frac{dg}{dm}g(m,b) = (2*g(m,b))*-x = 2*(y - (mx + b))*-x $\n",
-    " \n",
+    "Now plugging these back into our chain rule [1] we have: \n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\color{blue}{\\frac{dJ}{dg}J(g(m,b))}*\\color{red}{\\frac{dg}{dm}g(m,b)}&=\\color{blue}{(2*g(m,b))}*\\color{red}{-x}\\\\\n",
+    "\\\\\n",
+    "&= 2*(y - (mx + b))*-x\n",
+    "\\\\\n",
+    "\\end{align}\n",
+    "$$\n",
     " So\n",
     " \n",
-    "$$\\frac{\\delta J}{\\delta m}J(m, b) =  2*(y - (mx + b))*-x = -2x*(y - (mx + b ))  $$"
+    "$$\n",
+    "\\begin{align}\n",
+    "[1]\\mspace{5ex}\\frac{\\delta J}{\\delta m}J(m, b)&=2*(y - (mx + b))*-x\\\\\n",
+    "\\\\\n",
+    "&= -2x*(y - (mx + b ))\\\\\n",
+    "\\end{align}\n",
+    "$$"
    ]
   },
   {
@@ -291,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\frac{\\delta J}{\\delta b}J(m, b) = \\frac{dJ}{db}(mx + b - y)^2$$"
+    "$$\\frac{\\delta J}{\\delta b}J(m, b) = \\frac{dJ}{db}(y - (mx + b))^2$$"
    ]
   },
   {
@@ -321,7 +372,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\frac{dJ}{db}J(g) = \\frac{dJ}{dg}J(g)*\\frac{dg}{db}g(m,b)$$"
+    "$$[2]\\mspace{5ex}\\frac{dJ}{db}J(g) = \\frac{dJ}{dg}J(g)*\\frac{dg}{db}g(m,b)$$"
    ]
   },
   {
@@ -342,16 +393,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\frac{dg}{db}g(m,b) = \\frac{dg}{db}(y - (mx + b) ) = -1$"
+    "$$\n",
+    "\\begin{align}\n",
+    "\\frac{dg}{db}g(m,b)&=\\frac{dg}{db}(y - (mx + b) )\\\\\n",
+    "\\\\\n",
+    "&=\\frac{dg}{db}(y-mx-b)\\\\\n",
+    "\\\\\n",
+    "&=\\frac{db}{db}y-\\frac{db}{db}mx-\\frac{dg}{db}b\\\\\n",
+    "\\\\\n",
+    "&=0-0-1\\\\\n",
+    "\\\\\n",
+    "&= -1\\\\\n",
+    "\\end{align}\n",
+    "$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we plug our terms into our chain rule and get: \n",
+    "Now we plug our terms into our chain rule [2] and get: \n",
     "\n",
-    "$$ \\frac{dJ}{dg}J(g)*\\frac{dg}{db}g(m,b) = 2*g(m,b)*-1 = -2*(y - (mx + b)) $$"
+    "$$\n",
+    "\\begin{align}\n",
+    "\\color{blue}{\\frac{dJ}{dg}J(g)}*\\color{red}{\\frac{dg}{db}g(m,b)}&= \\color{blue}{2*g(m,b)}*\\color{red}{-1}\\\\\n",
+    "\\\\\n",
+    "&= -2*(y - (mx + b))\\\\\n",
+    "\\end{align}\n",
+    "$$"
    ]
   },
   {
@@ -473,7 +542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
