moved images to images folder

--- a/index.ipynb
+++ b/index.ipynb
@@ -169,7 +169,7 @@
    "source": [
     "Just our other multivariable functions we have seen thus far, we can display it in three dimensions, and it looks like the following.\n",
     "\n",
-    "![](./gradientdescent.png)"
+    "![](./images/gradientdescent.png)"
    ]
   },
   {
