--- a/index.ipynb
+++ b/index.ipynb
@@ -169,7 +169,7 @@
    "source": [
     "Just our other multivariable functions we have seen thus far, we can display it in three dimensions, and it looks like the following.\n",
     "\n",
-    "![](./images/gradientdescent.png)"
+    "<img src=\"./images/new_gradientdescent.png\" width=\"600\">"
    ]
   },
   {
@@ -542,7 +542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
