--- a/index.ipynb
+++ b/index.ipynb
@@ -27,8 +27,7 @@
    "source": [
     "## Objectives\n",
     "You will be able to:\n",
-    "- Represent the RSS as a multivariable function\n",
-    "- Understand how to create a cost function when we allow both slope and intercept to change in our linear regression\n"
+    "- Represent RSS as a multivariable function and take partial derivatives to perform gradient descent"
    ]
   },
   {
@@ -213,212 +212,27 @@
     "\\\\\n",
     "\\frac{\\delta J}{\\delta b}J(m, b) & = \\boldsymbol{\\frac{\\delta J}{\\delta b}}(y - (mx + b))^2  &&\\text{partial derivative with respect to} \\textbf{ b}\\\\\n",
     "\\end{align}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Taking our first partial derivative"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's start with taking the **partial derivative** with respect to $m$.\n",
+    "$$\n",
     "\n",
-    "$$\\frac{\\delta J}{\\delta m}J(m, b) = \\frac{\\delta J}{\\delta m}(y - (mx + b))^2$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now this is a tricky function to take the derivative of.  So we can use functional composition followed by the chain rule to make it easier.  Using functional composition, we can rewrite our function $J$ as two functions: "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
+    "You'll notice that taking the partial derivatives of these functions is not that simple. You've learned a set of rules about derivatives in this section, but if you want to take these two derivatives successfully, you'll need to use the **chain rule**. The chain rule is a formula to compute the derivative of a composite function.\n",
+    "\n",
+    "The **chain rule** basically tells you how to compute the derivative of nearly _any function_ (or any \"molecular\" function built up from fundamental \"atomic\" functions like $sin(x)$ or $e^x$).\n",
+    "\n",
+    "In this lesson, we don't want to get lost in the details of the chain rule and how to get to the the partial derivatives needed in this lesson, but in the appendix, you can find:\n",
+    "- a lesson on the chain rule in general\n",
+    "- A lesson that walks you through the details of finding the partial derivatives in this lesson.\n",
+    "\n",
+    "The resulting partial derivatives are:\n",
+    "\n",
     "$$\n",
     "\\begin{align}\n",
-    "g(m,b)&= y - (mx + b) &&\\text{set $g$ equal to $y-\\hat{y}$}\\\\\n",
-    "\\\\\n",
-    "J(g(m,b))&= (g(m,b))^2 &&\\text{now $J$ is a function of $g$ and $J=g^2$}\\\\\n",
-    "\\end{align}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now using the chain rule to find the partial derivative with respect to a change in the slope, gives us:\n",
-    "\n",
-    "$$\n",
-    "[1]\\mspace{5ex}\\frac{dJ}{dm}J(g) = \\frac{dJ}{dg}J(g(m, b))*\\frac{dg}{dm}g(m,b)\n",
-    "$$\n",
-    "\n",
-    "Because **g** is a function of **m** we get $\\boldsymbol{\\frac{dg}{dm}}(g)$ and \n",
-    "\n",
-    "**J** is a function of **g (which is a function of m**) we get $\\boldsymbol{\\frac{dJ}{dg}}(J)$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Our next step is to solve these derivatives individually: \n",
-    "$$\n",
-    "\\begin{align}\n",
-    "\\frac{dJ}{dg}J(g(m, b))&=\\frac{dJ}{dg}g(m,b)^2 &&\\text{Solve $\\boldsymbol{\\frac{dJ}{dg}}(J)$}\\\\\n",
-    "\\\\\n",
-    "&= 2*g(m,b)\\\\\n",
-    "\\\\\n",
-    "\\frac{dg}{dm}g(m,b)&=\\frac{dg}{dm} (y - (mx +b)) &&\\text{Solve $\\boldsymbol{\\frac{dg}{dm}}(g)$}\\\\\n",
-    "\\\\\n",
-    "&=\\frac{dg}{dm} (y - mx - b)\\\\\n",
-    "\\\\\n",
-    "&=\\frac{dg}{dm}y - \\frac{dg}{dm}mx - \\frac{dg}{dm}b\\\\\n",
-    "\\\\\n",
-    "&= 0-x-0\\\\\n",
-    "\\\\\n",
-    "&=-x\\\\\n",
-    "\\end{align}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> Each of the terms are treated as constants, except for the middle term.  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now plugging these back into our chain rule [1] we have: \n",
-    "$$\n",
-    "\\begin{align}\n",
-    "\\color{blue}{\\frac{dJ}{dg}J(g(m,b))}*\\color{red}{\\frac{dg}{dm}g(m,b)}&=\\color{blue}{(2*g(m,b))}*\\color{red}{-x}\\\\\n",
-    "\\\\\n",
-    "&= 2*(y - (mx + b))*-x\n",
-    "\\\\\n",
+    "\\frac{\\delta J}{\\delta m}J(m, b)&= -2x*(y - (mx + b ))\n",
     "\\end{align}\n",
     "$$\n",
-    " So\n",
-    " \n",
-    "$$\n",
-    "\\begin{align}\n",
-    "[1]\\mspace{5ex}\\frac{\\delta J}{\\delta m}J(m, b)&=2*(y - (mx + b))*-x\\\\\n",
-    "\\\\\n",
-    "&= -2x*(y - (mx + b ))\\\\\n",
-    "\\end{align}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Our second partial derivative"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ok, now let's calculate the partial derivative with respect to a change in the y-intercept.  We express this mathematically with the following:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\\frac{\\delta J}{\\delta b}J(m, b) = \\frac{dJ}{db}(y - (mx + b))^2$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Then once again, we use functional composition following by the chain rule.  So we view our cost function as the same two functions $g(m,b)$ and $J(g(m,b))$.  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$g(m,b) = y - (mx + b)$$\n",
-    "\n",
-    "$$J(g(m,b)) = (g(m,b))^2$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "So applying the chain rule, to this same function composition, we get:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$[2]\\mspace{5ex}\\frac{dJ}{db}J(g) = \\frac{dJ}{dg}J(g)*\\frac{dg}{db}g(m,b)$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, our next step is to calculate these partial derivatives individually."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "From our earlier calculation of the partial derivative, we know that $\\frac{dJ}{dg}J(g(m,b)) = \\frac{dJ}{dg}g(m,b)^2 = 2*g(m,b)$.  The only thing left to calculate is $\\frac{dg}{db}g(m,b)$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\begin{align}\n",
-    "\\frac{dg}{db}g(m,b)&=\\frac{dg}{db}(y - (mx + b) )\\\\\n",
-    "\\\\\n",
-    "&=\\frac{dg}{db}(y-mx-b)\\\\\n",
-    "\\\\\n",
-    "&=\\frac{db}{db}y-\\frac{db}{db}mx-\\frac{dg}{db}b\\\\\n",
-    "\\\\\n",
-    "&=0-0-1\\\\\n",
-    "\\\\\n",
-    "&= -1\\\\\n",
-    "\\end{align}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we plug our terms into our chain rule [2] and get: \n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "\\color{blue}{\\frac{dJ}{dg}J(g)}*\\color{red}{\\frac{dg}{db}g(m,b)}&= \\color{blue}{2*g(m,b)}*\\color{red}{-1}\\\\\n",
-    "\\\\\n",
-    "&= -2*(y - (mx + b))\\\\\n",
+    "\\frac{\\delta J}{\\delta b}J(m, b) & = -2*(y - (mx + b))\n",
     "\\end{align}\n",
     "$$"
    ]
@@ -542,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
