--- a/index.ipynb
+++ b/index.ipynb
@@ -27,6 +27,7 @@
    "source": [
     "## Objectives\n",
     "You will be able to:\n",
+    "\n",
     "- Represent RSS as a multivariable function and take partial derivatives to perform gradient descent"
    ]
   },
@@ -342,9 +343,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (learn-env)",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -356,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
