fix objectives spacing

--- a/index.ipynb
+++ b/index.ipynb
@@ -26,9 +26,10 @@
    "metadata": {},
    "source": [
     "## Objectives\n",
+    "\n",
     "You will be able to:\n",
     "\n",
-    "- Represent RSS as a multivariable function and take partial derivatives to perform gradient descent"
+    "- Represent RSS as a multivariable function and take partial derivatives to perform gradient descent\n"
    ]
   },
   {
