fix objectives spacing

--- a/index.ipynb
+++ b/index.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "You will be able to:\n",
     "\n",
-    "- Represent RSS as a multivariable function and take partial derivatives to perform gradient descent\n"
+    "* Represent RSS as a multivariable function and take partial derivatives to perform gradient descent\n"
    ]
   },
   {
